examples/c/error-codes/violates-constraint/fatal/CV-TDL2-bad-static.output
CV-TDL2-bad-static.c:4:13: error: 'extern' variable cannot have an initializer
 extern int a = 1;
            ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
